@@ -74,14 +74,6 @@
                 <buffer-depth>3 [1..]</buffer-depth>
                 <custom-allocator>true [true|false]</custom-allocator>
             </decklink>
-            <blocking-decklink>
-                <device>[1..]</device>
-                <embedded-audio>false [true|false]</embedded-audio>
-                <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
-                <keyer>external [external|internal|default]</keyer>
-                <key-only>false [true|false]</key-only>
-                <custom-allocator>true [true|false]</custom-allocator>
-            </blocking-decklink>
             <bluefish>
                 <device>[1..]</device>
                 <embedded-audio>false [true|false]</embedded-audio>
